2006/7/15 -- released version 20060715_trunk

* added matchers CheckLatency and CheckLoss -- tobi, from Dylan Vanderhoof DylanV semaphore.com
* added TacacsPlus probe -- tobi, from Gary.Mikula * nasd.com

2006/7/14 -- released version 20060714_trunk

2006/7/13 -- released version 20060713_trunk

* pass 'prevmatch' to alert matcher plugins.
  -- niko, from Dylan Vanderhoof <DylanV *semaphore.com>
* fix subject in tSmoke 'morning' emails.  --niko, 
   from Jean-Philippe Luiggi <Jean-Philippe.Luiggi *revolutionlinux.com>

2006/7/12 -- released version 20060712_trunk

2006/7/11 -- released version 20060711_trunk

2006/7/10 -- released version 20060710_trunk

* AnotherDNS.pm: added option 'require_answers' for testing
  recursive DNS servers. -- niko
* fix running an external program on edge-triggered alerts.
  -- niko, from Peter Klausner <peter.klausner *gmail.com>

2006/7/9 -- released version 20060709_trunk

2006/7/8 -- released version 20060708_trunk

* fix loss_color description -- tobi
* fix loss_background implementation to still color mainline

2006/7/7 -- released version 20060707_trunk

2006/7/6 -- released version 20060706_trunk

2006/7/5 -- released version 20060705_trunk

2006/7/4 -- released version 20060704_trunk

* new feature to color the graph background in sync with the loss -- grahame.bo
* new probe JunOS Telnet ping -- Shan Ali Khan shanali *singtel.com

2006/6/27 -- released version 20060627_trunk

2006/6/26 -- released version 20060626_trunk

2006/6/25 -- released version 20060625_trunk

2006/6/24 -- released version 20060624_trunk

2006/6/23 -- released version 20060623_trunk

2006/6/22 -- released version 20060622_trunk

2006/6/21 -- released version 20060621_trunk

2006/6/20 -- released version 20060620_trunk

2006/6/19 -- released version 20060619_trunk

2006/6/18 -- released version 20060618_trunk

2006/6/17 -- released version 20060617_trunk

2006/6/16 -- released version 20060616_trunk

2006/6/15 -- released version 20060615_trunk
