@@ -1,3 +1,5 @@
+2006/7/16 -- released version 20060716_trunk
+
 2006/7/15 -- released version 20060715_trunk
 
 * added matchers CheckLatency and CheckLoss -- tobi, from Dylan Vanderhoof DylanV semaphore.com
